--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,12 +81,12 @@ if(GPROF)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pg -DENABLE_GPROF ")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg -DENABLE_GPROF ")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg ")
-    set(GPORF_LIB vitagprof SceLibKernel_stub)
+    set(LIB_GPORF vitagprof SceLibKernel_stub)
     set(NOASLR NOASLR)
 else()
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fomit-frame-pointer ")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fomit-frame-pointer ")
-    set(GPORF_LIB "")
+    set(LIB_GPORF "")
     set(NOASLR "")
 endif()
 
