--- a/apps/km_fbneo_xtreme_amped/Makefile
+++ b/apps/km_fbneo_xtreme_amped/Makefile
@@ -242,12 +242,12 @@ else ifeq ($(platform), vita)
 	CFLAGS += -mfloat-abi=hard -fsingle-precision-constant \
 	          -mfpu=neon -mcpu=cortex-a9 \
 			  -ffast-math -ftree-vectorize \
-			  -fdata-sections -ffunction-sections \
+			  -fdata-sections -ffunction-sections -funsafe-math-optimizations -mvectorize-with-neon-quad -O3 \
 			  -DTHREADY_PTHREAD
 	CXXFLAGS += -mfloat-abi=hard -fsingle-precision-constant -fpermissive -fno-rtti \
 	          -mfpu=neon -mcpu=cortex-a9 \
 			  -ffast-math -ftree-vectorize \
-			  -fdata-sections -ffunction-sections \
+			  -fdata-sections -ffunction-sections -funsafe-math-optimizations -mvectorize-with-neon-quad -O3 \
 			  -DTHREADY_PTHREAD
 	ASFLAGS += -mcpu=cortex-a9
 	
