--- a/apps/fba_lite/makefile.libretro
+++ b/apps/fba_lite/makefile.libretro
@@ -225,12 +225,12 @@ else ifeq ($(platform), vita)
     -marm -mcpu=cortex-a9 -mfpu=neon -DVITA -D__vita__ \
     -mword-relocations -fno-optimize-sibling-calls \
     -fomit-frame-pointer -fno-unwind-tables -fno-asynchronous-unwind-tables \
-    -ffast-math -ftree-vectorize -O3
+    -ffast-math -ftree-vectorize -O3 -funsafe-math-optimizations -mvectorize-with-neon-quad
    CXXFLAGS += -mfloat-abi=hard -fsingle-precision-constant -fpermissive \
      -marm -mcpu=cortex-a9 -mfpu=neon -DVITA -D__vita__ \
      -mword-relocations -fno-optimize-sibling-calls \
      -fomit-frame-pointer -fno-unwind-tables -fno-asynchronous-unwind-tables \
-     -ffast-math -ftree-vectorize -O3 \
+     -ffast-math -ftree-vectorize -O3 -funsafe-math-optimizations -mvectorize-with-neon-quad \
      -fno-rtti -fno-exceptions -std=c++17
    EXTERNAL_ZLIB = 1
    STATIC_LINKING = 1
