--- a/share/pkg/assets/shaders/shaders.ini
+++ b/share/pkg/assets/shaders/shaders.ini
@@ -6,13 +6,14 @@
 004=crt-lottes-fast
 005=zfast_crt
 006=crt-mattias
-007=advanced-aa
-008=scale2xplus
-009=sharp-bilinear
-010=sharp-bilinear-simple
-011=gba-color
-012=gbc-color
-013=gba-color+lcd3x
-014=gb-palette-dmg
-015=gb-palette-pocket
-016=gb-palette-light
+007=crt-gdv-mini
+008=advanced-aa
+009=scale2xplus
+010=sharp-bilinear
+011=sharp-bilinear-simple
+012=gba-color
+013=gbc-color
+014=gba-color+lcd3x
+015=gb-palette-dmg
+016=gb-palette-pocket
+017=gb-palette-light
